--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "arreglo321-21-enero",
-  "version": "2.0.0",
+  "name": "antigravity-donaciones-v2",
+  "version": "1.0.0",
   "description": "Tracker de donaciones para Pocket Ants con soporte offline y sincronización en tiempo real con Firebase.",
   "main": "service-worker.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm run build-sw",
     "build-sw": "workbox generateSW workbox-config.js",
     "prebuild": "workbox generateSW workbox-config.js",
     "serve": "npx serve . -p 8080"
